# review

./: .gitignore  Cargo.toml  README.md  go.mod  main.go  markdown.go  package.json  patch.go  pnpm-lock.yaml  server.go  vcs.go  vite.config.js
.github/workflows/: publish-install-branch.yml  rust.yml
internal/frontend/: index.html
internal/frontend/src/: api.js  app.js  comments.js  constants.js  diff-view.js  icons.js  layout.js  patch-files.js  search.js  state.js  stats.js  storage.js  style.css  tree.js  util.js
internal/static/: README.md  index.html
internal/static/assets/: index-BjHjK07b.css  index-CDfElglu.js  index-Cva7RX7s.js  index-iIMNbMKA.js  index-o55OAynk.js  pierre-dark-vibrant-KQ6p6T2R.js  pierre-light-vibrant-0cUW3kII.js  resolveThemes-H12Kabn-.js  worker-MpDiWzB9.js
src/: cli.rs  diff.rs  frontend.rs  git_backend.rs  jj_backend.rs  main.rs  markdown.rs  patch.rs  server.rs  vcs.rs
