[package]
name = "review"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
bstr = "1.12"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
getrandom = "0.3"
gix = "0.84"
hex = "0.4"
include_dir = "0.7"
jj-lib = { package = "jj-lib", version = "0.42", default-features = false, features = ["git"] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
