[package]
name = "review"
version = "0.1.0"
edition = "2024"
authors = ["Filippo Rossi"]
description = "Local browser review UI for jj and Git diffs"
repository = "https://github.com/notfilippo/review"
readme = "README.md"
keywords = ["jj", "git", "review", "diff"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
bstr = "1.12"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
getrandom = "0.4"
gix = "0.85"
hex = "0.4"
include_dir = "0.7"
jj-lib = { package = "jj-lib", version = "0.42", default-features = false, features = ["git"] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
